@@ -282,6 +282,8 @@ struct instance_flags {
 	boolean paranoid_quit;	/* Ask for 'yes' when quitting */
 	boolean paranoid_remove; /* Always show menu for 'T' and 'R' */
 	boolean paranoid_trap; /* Ask for 'yes' before walking into known traps */
+	boolean paranoid_lava; /* Ask for 'yes' before walking into lava */
+	boolean paranoid_water; /* Ask for 'yes' before walking into water */
 #ifdef QUIVER_FIRED
 	boolean quiver_fired;	/* quiver with f command */
 #endif
