@@ -1855,6 +1855,30 @@ domove()
 		return;
 	}
 
+	/* If no 'm' prefix, paranoid ask dangerous moves */
+	if (!flags.nopick || flags.run) {
+		if (!Levitation && !Flying && !is_clinger(youmonst.data) &&
+				!Stunned && !Confusion &&
+				(is_pool(x, y) || is_lava(x, y)) && levl[x][y].seenv &&
+				!is_pool(u.ux, u.uy) && !is_lava(u.ux, u.uy)) {
+			if (is_pool(x, y) && iflags.paranoid_water) {
+				/* water */
+				if (paranoid_yn("Really enter the water?", iflags.paranoid_water) != 'y') {
+					flags.move = 0;
+					nomul(0, 0);
+					return;
+				}
+			} else if (iflags.paranoid_lava) {
+				/* lava */
+				if (paranoid_yn("Really walk into lava?", iflags.paranoid_lava) != 'y') {
+					flags.move = 0;
+					nomul(0, 0);
+					return;
+				}
+			}
+		}
+	}
+
 	/* Move ball and chain.  */
 	if (Punished)
 	    if (!drag_ball(x,y, &bc_control, &ballx, &bally, &chainx, &chainy,
